// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Avatar Basic Usage 1`] = `
Object {
  "docs": "The most basic instance of an Avatar requires a src image and a title to be used for accessibility or as a fallback in case the image can't be loaded.",
  "html": "<span
  class=\\"drac-avatar drac-bg-green-transparent drac-text-green\\"
  style=\\"
    background-image: url(https://ui.draculatheme.com/static/images/avatar.png);
  \\"
></span>
",
  "react": "<Avatar
  title=\\"Count Dracula\\"
  src=\\"https://ui.draculatheme.com/static/images/avatar.png\\"
/>;
",
  "title": "Usage",
}
`;

exports[`Site: Avatar Borders 1`] = `
Object {
  "docs": "A border variant allows for customization of the border width of an Avatar, or for an Avatar to be rendered without a border.",
  "html": "<div>
  <span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-lg-stroke drac-mb-sm\\"
    style=\\"
      background-image: url(https://ui.draculatheme.com/static/images/avatar.png);
    \\"
  ></span
  ><span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-no-border\\"
    style=\\"
      background-image: url(https://ui.draculatheme.com/static/images/avatar.png);
    \\"
  ></span>
</div>
",
  "react": "<div>
  <Avatar
    src=\\"https://ui.draculatheme.com/static/images/avatar.png\\"
    title=\\"Count Dracula\\"
    borderVariant=\\"large\\"
    mb=\\"sm\\"
  />
  <Avatar
    src=\\"https://ui.draculatheme.com/static/images/avatar.png\\"
    title=\\"Count Dracula\\"
    borderVariant=\\"none\\"
  />
</div>;
",
  "title": "Borders",
}
`;

exports[`Site: Avatar Colors 1`] = `
Object {
  "docs": "The Avatar component accepts a *color* param that allows for customizing the background and accent color for an Avatar.",
  "html": "<span
  class=\\"drac-avatar drac-bg-cyan-transparent drac-text-cyan\\"
  style=\\"
    background-image: url(https://ui.draculatheme.com/static/images/avatar.png);
  \\"
></span>
",
  "react": "<Avatar
  src=\\"https://ui.draculatheme.com/static/images/avatar.png\\"
  title=\\"Count Dracula\\"
  color=\\"cyan\\"
/>;
",
  "title": "Colors",
}
`;

exports[`Site: Avatar Variants 1`] = `
Object {
  "docs": "Avatars accept multiple variants, which can be used to render a more subtle variation of the Avatar component.",
  "html": "<div>
  <span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-mb-sm\\"
    style=\\"
      background-image: url(https://ui.draculatheme.com/static/images/avatar.png);
    \\"
  ></span
  ><span
    class=\\"drac-avatar drac-bg-green-transparent drac-text-green drac-avatar-subtle\\"
    style=\\"
      background-image: url(https://ui.draculatheme.com/static/images/avatar.png);
    \\"
  ></span>
</div>
",
  "react": "<div>
  <Avatar
    src=\\"https://ui.draculatheme.com/static/images/avatar.png\\"
    title=\\"Count Dracula\\"
    variant=\\"normal\\"
    mb=\\"sm\\"
  />
  <Avatar
    src=\\"https://ui.draculatheme.com/static/images/avatar.png\\"
    title=\\"Count Dracula\\"
    variant=\\"subtle\\"
  />
</div>;
",
  "title": "Variants",
}
`;
